--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="brand-name">
-                    <a href="/" class="logo">Puskar</a>
+                    <a href="/" class="logo">Samba</a>
                 </div>
                 <div class="hamburger">
                     <i class="fa fa-bars"></i>
